# aic8800-wireless

./: Cargo.toml
docs/: 04_SG2002_PINOUT_引脚摘要.md  BLOCK_CNT恒为0_LicheeRV逐函数分析.md  BLOCK_CNT恒为0_根因分析.md  LicheeRV_BYTEMODE与BLOCK_CNT_8801.md  LicheeRV_IPC_F1_对照.md  LicheeRV_Linux依赖与wireless_总线数据宽度.md  LicheeRV_WiFi_Kernel_移植分析.md  LicheeRV_aic8800对Linux内核子系统依赖清单.md  LicheeRV_bootrom启动时序_完整对照.md  LicheeRV_docs_AIC8800检索与程序对照.md  LicheeRV_逐字节对照_电源时序.md  LicheeRV与wireless_中断与多线程对比.md  README.md  SDIO与MMC模块_aic8800与wireless对齐结论.md  SDIO驱动.md  aic8800_MMC调用与wireless_逐项对照.md  bootrom前_LicheeRV与StarryOS对比.md  cfg80211_ops_对照表.md  ipc_timeout_analysis.md  mmc_crate与Linux_MMC子系统对照.md  platform与mmc职责划分.md  wireless启动流程与aic8800逐行对照.md  wireless项目架构与aic8800启动流程对照.md  上电复位时钟时序_完整检查清单.md  参数与LicheeRV_TRM对照表.md  固件加载流程_旧wifi-driver与LicheeRV对照.md
driver/: Cargo.toml
driver/bsp/: Cargo.toml
driver/bsp/src/: cmd.rs  export.rs  firmware.rs  firmware_data.rs  fw_load.rs  gpio.rs  lib.rs  sdio_irq.rs  sync.rs
driver/bsp/src/sdio/: backend.rs  chip_ident.rs  cis.rs  flow.rs  irq.rs  mmc_impl.rs  mod.rs  ops.rs  types.rs
driver/fdrv/: Cargo.toml
driver/fdrv/src/: cfgfile.rs  e2a_dispatch.rs  ipc.rs  lib.rs  lmac_cmd.rs  manager.rs  net_device.rs  platform.rs  priv_cmd.rs  sdio_bus.rs  sdio_host.rs  tcp_ack.rs  txrxif.rs  vendor.rs  wiphy.rs  wiphy_impl.rs
driver/mmc/: Cargo.toml
driver/mmc/src/: card.rs  driver.rs  sdio_func.rs  types.rs
driver/skb/: Cargo.toml  README.md
driver/skb/src/: lib.rs  skbuff.rs
firmware/: README.md  rwnx_karst.ini  rwnx_trident.ini
ieee80211/: Cargo.toml
ieee80211/src/: cfg80211.rs  ieee80211.rs  lib.rs
kernel/ieee80211/: README.md
kernel/ieee80211/src/: cfg80211.rs  lib.rs  mac80211.rs
kernel/mmc/: README.md
kernel/mmc/src/: cccr.rs  host.rs  lib.rs
kernel/sdhci/: Cargo.toml
kernel/sdhci/src/: cache.rs  flow.rs  lib.rs  sdhci.rs  sdio_io.rs  sdio_ops.rs
kernel/skb/src/: queue.rs
src/: lib.rs
